fixed the overflow-x

--- a/styles/_hero-section.scss
+++ b/styles/_hero-section.scss
@@ -43,7 +43,7 @@
                 margin-top: 12px;
                 color: $grey-color;
                 border: none;
-                outline: 0.1mm solid $black-color;
+                outline: 1px solid $black-color;
 
                 & option{
                     background-color: $light-grey-color;
