--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,4 @@
 body{
     width: 100%;
     position: relative;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
 }
